# rasterizer

./: BlinnPhongScene.h  Bound.h  CMakeLists.txt  Main.cpp  Mesh.cpp  Mesh.h  PBRScene.h  PixelBuffer.h  Rasterizer.cpp  Renderer.cpp  Renderer.h  Shader.h  readme.md
Core/: Camera.h  DepthBuffer.h  Material.h  Mesh.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.h  Shader.h  Shader.h.autosave  Texture.cpp  Texture.h
Materials/: BasicMaterial.h
Scenes/: BlinnPhongScene.h  PBRScene.h
Shaders/: BasicShader.h
